Bug fix for course list alignment

--- a/src/app/course-list/course-list.component.css
+++ b/src/app/course-list/course-list.component.css
@@ -1,7 +1,7 @@
-.example-spacer {
-    flex: 1 1 auto;
-}
-
 .fixRight {
     float: right;
+}
+
+.marginTop {
+    margin-top: 10px;
 }
